Main classes: Added find by role capability. Test classes: Added test cases for find by role and favourite.